--- a/endnote.bib
+++ b/endnote.bib
@@ -320,3 +320,18 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	langid = {english},
 	file = {Springer Full Text PDF:files/4872/Van Zandt et al. - 2000 - A comparison of two response time models applied t.pdf:application/pdf}
 }
+
+@article{wiecki_hddm_2013,
+	title = {{HDDM}: Hierarchical Bayesian estimation of the Drift-Diffusion Model in Python},
+	volume = {7},
+	url = {https://www.readcube.com/articles/10.3389%2Ffninf.2013.00014},
+	doi = {10.3389/fninf.2013.00014},
+	shorttitle = {{HDDM}},
+	abstract = {The diffusion model is a commonly used tool to infer latent psychological processes underlying decision-making, and to link them to neural mechanisms based on response times. Although efficient open source software has been made available to quantitatively fit the model to data, current estimation methods require an abundance of response time measurements to recover meaningful parameters, and only provide point estimates of each parameter. In contrast, hierarchical Bayesian parameter estimation methods are useful for enhancing statistical power, allowing for simultaneous estimation of individual subject parameters and the group distribution that they are drawn from, while also providing measures of uncertainty in these parameters in the posterior distribution. Here, we present a novel Python-based toolbox called {HDDM} (hierarchical drift diffusion model), which allows fast and flexible estimation of the the drift-diffusion model and the related linear ballistic accumulator model. {HDDM} requires fewer data per subject/condition than non-hierarchical methods, allows for full Bayesian data analysis, and can handle outliers in the data. Finally, {HDDM} supports the estimation of how trial-by-trial measurements (e.g., {fMRI}) influence decision-making parameters. This paper will first describe the theoretical background of the drift diffusion model and Bayesian inference. We then illustrate usage of the toolbox on a real-world data set from our lab. Finally, parameter recovery studies show that {HDDM} beats alternative fitting methods like the χ2-quantile method as well as maximum likelihood estimation. The software and documentation can be downloaded at: http://ski.clps.brown.edu/hddm\_docs/},
+	journaltitle = {Frontiers in Neuroinformatics},
+	author = {Wiecki, Thomas V. and Sofer, Imri and Frank, Michael J.},
+	urldate = {2020-06-11},
+	date = {2013},
+	langid = {english},
+	file = {Snapshot:/home/hcp4715/Zotero/storage/RMHGCJFX/fninf.2013.html:text/html;Full Text:/home/hcp4715/Zotero/storage/8UFHUUTM/Wiecki et al. - 2013 - HDDM Hierarchical Bayesian estimation of the Drif.pdf:application/pdf}
+}
