solve paralle processing

--- a/HDDM/MoralSelf_hddm_real_modelling.ipynb
+++ b/HDDM/MoralSelf_hddm_real_modelling.ipynb
@@ -219,6 +219,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suggestions from Mads\n",
+    "\n",
+    "You can simulate data with two conditions, assuming drift rate is positive for cond1 and negative for cond2 (0-v) (or flipping z instead of v using z and 1-z):\n",
+    "\n",
+    "cond1 = {'v':1, 'a':2, 't':.3, 'sv':0, 'z':.6, 'sz':0, 'st':0}\n",
+    "cond2 = {'v':-1, 'a':2, 't':.3, 'sv':0, 'z':.6, 'sz':0, 'st':0}\n",
+    "data, params = hddm.generate.gen_rand_data({'cond1': cond1,\n",
+    "                                                'cond2': cond2},\n",
+    "                                                size=10,\n",
+    "                                                subjs=2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
