--- a/endnote.bib
+++ b/endnote.bib
@@ -317,8 +317,7 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	author = {Van Zandt, Trisha and Colonius, Hans and Proctor, Robert W.},
 	urldate = {2020-06-07},
 	date = {2000-06-01},
-	langid = {english},
-	file = {Springer Full Text PDF:files/4872/Van Zandt et al. - 2000 - A comparison of two response time models applied t.pdf:application/pdf}
+	langid = {english}
 }
 
 @article{wiecki_hddm_2013,
@@ -332,6 +331,58 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	author = {Wiecki, Thomas V. and Sofer, Imri and Frank, Michael J.},
 	urldate = {2020-06-11},
 	date = {2013},
-	langid = {english},
-	file = {Snapshot:/home/hcp4715/Zotero/storage/RMHGCJFX/fninf.2013.html:text/html;Full Text:/home/hcp4715/Zotero/storage/8UFHUUTM/Wiecki et al. - 2013 - HDDM Hierarchical Bayesian estimation of the Drif.pdf:application/pdf}
+	langid = {english}
+}
+
+
+@article{golubickis_self-prioritization_2017,
+	title = {Self-prioritization and perceptual matching: The effects of temporal construal},
+	volume = {45},
+	issn = {1532-5946},
+	url = {https://doi.org/10.3758/s13421-017-0722-3},
+	doi = {10.3758/s13421-017-0722-3},
+	shorttitle = {Self-prioritization and perceptual matching},
+	abstract = {Recent research has revealed that self-referential processing enhances perceptual judgments — the so-called self-prioritization effect. The extent and origin of this effect remains unknown, however. Noting the multifaceted nature of the self, here we hypothesized that temporal influences on self-construal (i.e., past/future-self continuity) may serve as an important determinant of stimulus prioritization. Specifically, as representations of the self increase in abstraction as a function of temporal distance (i.e., distance from now), self-prioritization may only emerge when stimuli are associated with the current self. The results of three experiments supported this prediction. Self-relevance only enhanced performance in a standard perceptual-matching task when stimuli (i.e., geometric shapes) were connected with the current self; representations of the self in the future (Expts. 1 \& 2) and past (Expt. 3) failed to facilitate decision making. To identify the processes underlying task performance, data were interrogated using a hierarchical drift diffusion model ({HDDM}) approach. Results of these analyses revealed that self-prioritization was underpinned by a stimulus bias (i.e., rate of information uptake). Collectively, these findings elucidate when and how self-relevance influences decisional processing.},
+	pages = {1223--1239},
+	number = {7},
+	journaltitle = {Memory \& Cognition},
+	shortjournal = {Mem Cogn},
+	author = {Golubickis, Marius and Falben, Johanna K. and Sahraie, Arash and Visokomogilski, Aleksandar and Cunningham, William A. and Sui, Jie and Macrae, C. Neil},
+	urldate = {2020-06-14},
+	date = {2017-10-01},
+	langid = {english}
+}
+
+
+@article{golubickis_valence_2019,
+	title = {Valence and ownership: object desirability influences self-prioritization},
+	rights = {2019 Springer-Verlag {GmbH} Germany, part of Springer Nature},
+	issn = {1430-2772},
+	url = {https://link.springer.com/article/10.1007/s00426-019-01235-w},
+	doi = {10.1007/s00426-019-01235-w},
+	shorttitle = {Valence and ownership},
+	abstract = {Research has demonstrated that possession exerts a potent influence on stimulus processing, such that objects are categorized more rapidly when owned-by-self than when they belong to other people. Outstanding theoretical questions remain, however, regarding the extent of this self-prioritization effect. In particular, does ownership enhance the processing of objects regardless of their valence or is self-prioritization restricted to only desirable items? To address this issue, here we explored the speed with which participants categorized objects (i.e., desirable and undesirable posters) that ostensibly belonged to the self and a best friend. In addition, to identify the cognitive processes supporting task performance, data were submitted to a hierarchical drift-diffusion model ({HDDM}) analysis. The results revealed a self-prioritization effect (i.e., {RTself} \&lt; {RTfriend}) for desirable posters that was underpinned by differences in the efficiency of stimulus processing. Specifically, decisional evidence was extracted more rapidly from self-owned posters when they were desirable than undesirable, an effect that was reversed for friend-owned posters. These findings advance understanding of when and how valence influences self-prioritization during decisional processing.},
+	pages = {1--10},
+	journaltitle = {Psychological Research},
+	shortjournal = {Psychological Research},
+	author = {Golubickis, Marius and Ho, Nerissa S. P. and Falbén, Johanna K. and Schwertel, Carlotta L. and Maiuri, Alessia and Dublas, Dagmara and Cunningham, William A. and Macrae, C. Neil},
+	urldate = {2020-06-14},
+	date = {2019-08-01},
+	langid = {english}
+}
+
+@article{reuther_does_2017,
+	title = {Does self-prioritization affect perceptual processes?},
+	volume = {25},
+	issn = {1350-6285},
+	url = {https://doi.org/10.1080/13506285.2017.1323813},
+	doi = {10.1080/13506285.2017.1323813},
+	abstract = {The tendency to prioritize information related to the self (or socially salient information) has been established for several cognitive tasks. However, earlier studies on this question suffered from confounds such as familiarity and intimacy. Recently, a series of studies overcame this limitation using newly learnt associations between geometric shapes and identities. Results from these studies have been argued to show that self-prioritization affects perceptual processing. In two studies, we replicated and extended the original shape-identity association paradigm to test an alternative hypothesis that self-prioritization does not affect perceptual processes but arises from potential memory differences introduced during the formation of associations. We found that induced memory differences lead to response patterns similar to those that have been attributed to changes in the perceptual domain. However, even extended learning undertaken to equate memory for various identity-based associations did not eliminate the effects of self-prioritization, leaving the question open if the differences are cognitive or perceptual in nature. The current evidence can be explained both in terms of memory differences and perceptual effects. Hence, we strongly recommend that the existence of perceptual effects of self-prioritization should be investigated directly rather than through changes in reaction times in match–non-match tasks.},
+	pages = {381--398},
+	number = {1},
+	journaltitle = {Visual Cognition},
+	author = {Reuther, Josephine and Chakravarthi, Ramakrishna},
+	urldate = {2020-06-14},
+	date = {2017-03-16},
+	keywords = {Associative learning, memory, perception, self-prioritization, self-reference},
 }
