--- a/r-references.bib
+++ b/r-references.bib
@@ -316,3 +316,48 @@
   pages = {1--33},
   doi = {10.18637/jss.v069.i01},
 }
+@Article{R-brms_a,
+  title = {{brms}: An {R} Package for {Bayesian} Multilevel Models Using {Stan}},
+  author = {Paul-Christian Bürkner},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {80},
+  number = {1},
+  pages = {1--28},
+  doi = {10.18637/jss.v080.i01},
+  encoding = {UTF-8},
+}
+@Article{R-brms_b,
+  title = {Advanced {Bayesian} Multilevel Modeling with the {R} Package {brms}},
+  author = {Paul-Christian Bürkner},
+  journal = {The R Journal},
+  year = {2018},
+  volume = {10},
+  number = {1},
+  pages = {395--411},
+  doi = {10.32614/RJ-2018-017},
+  encoding = {UTF-8},
+}
+@Article{R-Rcpp_a,
+  title = {{Rcpp}: Seamless {R} and {C++} Integration},
+  author = {Dirk Eddelbuettel and Romain Fran\c{c}ois},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {8},
+  pages = {1--18},
+  url = {http://www.jstatsoft.org/v40/i08/},
+  doi = {10.18637/jss.v040.i08},
+}
+@Article{R-Rcpp_b,
+  title = {{Extending 	extit{R} with 	extit{C++}: A Brief Introduction to 	extit{Rcpp}}},
+  author = {Dirk Eddelbuettel and James Joseph Balamuta},
+  journal = {PeerJ Preprints},
+  year = {2017},
+  month = {aug},
+  volume = {5},
+  pages = {e3188v1},
+  issn = {2167-9843},
+  url = {https://doi.org/10.7287/peerj.preprints.3188v1},
+  doi = {10.7287/peerj.preprints.3188v1},
+}
