--- a/endnote.bib
+++ b/endnote.bib
@@ -386,3 +386,21 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	date = {2017-03-16},
 	keywords = {Associative learning, memory, perception, self-prioritization, self-reference},
 }
+
+
+@article{van_zandt_comparison_2000,
+	title = {A comparison of two response time models applied to perceptual matching},
+	volume = {7},
+	issn = {1531-5320},
+	url = {https://doi.org/10.3758/BF03212980},
+	doi = {10.3758/BF03212980},
+	abstract = {Two models, a Poisson race model and a diffusion model, are fit to data from a perceptual matching task. In each model, information about the similarity or the difference between two stimuli accumulates toward thresholds for either response. Stimulus variables are assumed to influence the rate at which information accumulates, and response variables are assumed to influence the level of the response thresholds. Three experiments were conducted to assess the performance of each model. In Experiment 1, observers performed under different response deadlines; in Experiment 2, response bias was manipulated by changing the relative frequency ofsame anddifferent stimuli. In Experiment 3, stimulus pairs were presented at three eccentricities: foveal, parafoveal, and peripheral. We examined whether the race and diffusion models could fit the response time and accuracy data through changes only in response parameters (for Experiments 1 and 2) or stimulus parameters (for Experiment 3). Comparisons between the two models suggest that the race model, which has not been studied extensively, can account for perceptual matching data at least as well as the diffusion model. Furthermore, without the constraints on the parameters provided by the experimental conditions, the diffusion and the race models are indistinguishable. This finding emphasizes the importance of fitting models across several conditions and imposing logical psychological constraints on the parameters of models.},
+	pages = {208--256},
+	number = {2},
+	journaltitle = {Psychonomic Bulletin \& Review},
+	shortjournal = {Psychonomic Bulletin \& Review},
+	author = {Van Zandt, Trisha and Colonius, Hans and Proctor, Robert W.},
+	urldate = {2020-06-07},
+	date = {2000-06-01},
+	langid = {english}
+}
